# graphics

./: Cargo.toml  build_android.sh  r
RustAndroid/: settings.gradle.kts
RustAndroid/app/: build.gradle.kts
RustAndroid/app/src/androidTest/java/com/example/rustandroid/: ExampleInstrumentedTest.kt
RustAndroid/app/src/main/: AndroidManifest.xml
RustAndroid/app/src/main/assets/: Suzanne.mtl
RustAndroid/app/src/main/java/com/example/rustandroid/: MainActivity.kt
RustAndroid/app/src/main/res/values/: strings.xml  themes.xml
RustAndroid/app/src/main/res/values-night/: themes.xml
RustAndroid/app/src/test/java/com/example/rustandroid/: ExampleUnitTest.kt
RustAndroid/gradle/: libs.versions.toml
RustAndroid/gradle/wrapper/: gradle-wrapper.properties
resources/: Suzanne.blend  Suzanne.mtl  colored_triangle.frag.glsl  colored_triangle.vert.glsl  colored_triangle_mesh.vert.glsl  gradient.glsl  input_structures.glsl  parametrable_gradient.comp.glsl  sky.comp.glsl  sky.glsl  tex_image.frag.glsl
src/: font.rs  lib.rs  main.rs  main_android.rs  maths.rs  rasterizer.rs  scene.rs  window.rs
src/iterator_render_pipeline/: mod.rs  rasterizer.rs
src/maths/: color.rs  mod.rs  rotation.rs  vec3f.rs  vec4u.rs
src/par_iter_render_pipeline/: mod.rs  rasterizer.rs  scene.rs  window.rs
src/rasterizer/: any_engine.rs  camera.rs  cpu_engine.rs  iterator.rs  mod.rs  original.rs  settings.rs
src/rasterizer/cpu/: cpu_engine.rs  mod.rs
src/rasterizer/cpu/parallel/: mod.rs  par_iter_0.rs  par_iter_1.rs  par_iter_2.rs  par_iter_3.rs  par_iter_4.rs  par_iter_5.rs  scene.rs  thread_pool.rs  thread_pool_1.rs  thread_pool_2.rs
src/rasterizer/cpu/single_threaded/: iterator.rs  mod.rs  original.rs  steps.rs  steps2.rs
src/rasterizer/parallel/: mod.rs  par_iter.rs  par_iter_2.rs  par_iter_3.rs  par_iter_4.rs  par_iter_5.rs  rasterizer.rs  scene.rs  window.rs
src/rasterizer/single_threaded/: iterator.rs  mod.rs  original.rs
src/rasterizer/vulkan/: allocated.rs  base.rs  commands.rs  compute_shaders.rs  crucru.rs  descriptors.rs  gfx_pipeline.rs  gltf_loader.rs  gui.rs  mod.rs  scene.rs  shaders_loader.rs  swapchain.rs  textures.rs  vk_graphics_pipeline.rs  vulkan_base.rs  vulkan_commands.rs  vulkan_descriptors.rs  vulkan_gui.rs  vulkan_shaders.rs  vulkan_swapchain.rs
src/scene/: camera.rs  gltf_file.rs  mesh.rs  mesh_library.rs  mod.rs  obj_file.rs  scene.rs  triangle.rs
src/scope_threads/: maths.rs  window.rs
