[package]
name = "graphics"
version = "0.1.0"
edition = "2024"
include = ["src/**/*"]

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
egui = { version = "0.31.1" }
egui-ash-renderer = { version = "0.8.0", features = ["vk-mem", "dynamic-rendering"] }
egui-winit = { version = "0.31.1", default-features = false }
fontdue = { version = "0.9.3", features = ["std"] }
glam = "0.30.3"
obj-rs = "0.7.4"
rand = "0.9.1"
rayon = "1.10.0"
softbuffer = "0.4.6"
vk-mem = "0.4.0"
winit = "0.30.11"
shaderc = "0.9.1"
# TODO: gltf features ?
gltf = { version = "1.4.1" }
image = { version = "0.25.6", default-features = false }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = true

[features]
stats = []
dbg_mem = []
vulkan_linked = ["ash/linked", "shaderc/prefer-static-linking", "vk-mem/linked"]
# default = ["vulkan_linked"]
